grammar.js
        program: $ => seq(
            optional($.script_tag),
            optional($.library_name),
            repeat($.import_or_export),
            repeat($.part_directive),
            repeat($.part_of_directive),
            repeat($._top_level_definition),
        ),

        // Page 187 topLevelDefinition
        _top_level_definition: $ => choice(
            $.class_definition,
            $.mixin_declaration,
            $.extension_declaration,
            $.extension_type_declaration,
            $.enum_declaration,
            $.type_alias,
            seq(
                optional($._metadata),
                optional($._external_builtin),
                $.function_signature,
                $._semicolon
            ),
            seq(
                optional($._metadata),
                optional($._external_builtin),
                $.getter_signature,
                $._semicolon
            ),
            seq(
                optional($._metadata),
                optional($._external_builtin),
                $.setter_signature,
                $._semicolon
            ),
            seq(
                optional($._metadata),
                $.getter_signature,
                $.function_body
            ),
            seq(
                optional($._metadata),
                $.setter_signature,
                $.function_body
            ),
            seq(
                optional($._metadata),
                $.function_signature,
                $.function_body
            ),
            // Top-level function with a record return type preceded by
            // bare annotations. See `_record_return_class_member` for the
            // rationale; this is the top-level analogue. Negative dynamic
            // precedence so the standard annotation-with-args path wins
            // when both are valid.
            prec.dynamic(-10, seq(
                repeat1(alias($._bare_annotation, $.annotation)),
                alias(
                    $._record_return_function_signature,
                    $.function_signature
                ),
                $.function_body
            )),
            //    final or const static final declaration list
            seq(
                optional($._metadata),
                choice(
                    $.final_builtin,
                    $.const_builtin
                ),
                optional($._type),
                $.static_final_declaration_list,
                $._semicolon
            ),
            seq(
                optional($._metadata),
                $._late_builtin,
                $.final_builtin,
                optional($._type),
                $.initialized_identifier_list,
                $._semicolon
            ),
            seq(
                optional($._metadata),
                optional($._late_builtin),
                choice($._type, $.inferred_type),
                $.initialized_identifier_list,
                $._semicolon
            ),
            // Top-level external variable declaration (Dart 3 / static
            // interop, e.g. `@JS() external _DdLogs? DD_LOGS;`).
            seq(
                optional($._metadata),
                $._external_builtin,
                choice(
                    seq($.final_builtin, optional($._type), $.identifier_list),
                    seq(optional($._late_builtin), $._var_or_type, $.identifier_list)
                ),
                $._semicolon
            )
        ),

        /**************************************************************************************************
        *********************************Literals**********************************************************
        ***************************************************************************************************
        ****These are the Literals from section 16.4-9 (Page 84-110) of the dart specification*************
        ***************************************************************************************************
        ***************************************************************************************************/

        _expression: $ => choice(
            $.pattern_assignment,
            $.assignment_expression,
            $.throw_expression,
            $.rethrow_expression,
            seq(
                $._real_expression,
                repeat($.cascade_section)
            )
        ),
        selector: $ => prec.right(choice(
            // '!',
            $._exclamation_operator,
            $._assignable_selector,
            $.argument_part,
            $.type_arguments,
        )),

        _exclamation_operator: $ => '!',
        arguments: $ => seq('(', optional($._argument_list), ')'),

        _argument_list: $ => prec.right(commaSep1TrailingComma($._any_argument)),

        named_argument: $ => seq($.label, $._expression),

        unconditional_assignable_selector: $ => choice(
            $.index_selector,
            seq('.', $.identifier)
        ),

        _assignable_selector: $ => choice(
            $.unconditional_assignable_selector,
            $.conditional_assignable_selector
        ),

        type_arguments: $ => choice( // was prec.right
            // seq(
            //     '<',
            //     '>',
            //     optional($.nullable_type)
            // ),
            seq(
                '<',
                commaSep($._type),
                '>',
                // optional($.nullable_type)
            )
        ),

        _statement: $ => choice(
            $.block,
            prec.dynamic(1, $.local_function_declaration),
            prec.dynamic(2, $.local_variable_declaration),
            $.for_statement,
            $.while_statement,
            $.do_statement,
            $.switch_statement,
            $.if_statement,
            //TODO: add rethrow statement.
            // $._declaration,

            $.try_statement,
            $.break_statement,
            $.continue_statement,
            $.return_statement,
            $.yield_statement,
            $.yield_each_statement,
            $.expression_statement,
            $.empty_statement,
            $.assert_statement,
            $.labeled_statement,
        ),

        block: $ => seq(
            '{', repeat($._statement), '}'
        ),

        annotation: $ => prec.right(seq(
            '@',
            field('name', choice($.identifier, $.scoped_identifier)),
            choice(
                optional(seq($.type_arguments, $.arguments)),
                optional($.arguments)
            )
        )),

        // A "bare" annotation: just `@name` with no argument list. This is
        // structurally a strict subset of `annotation` and is used to
        // disambiguate `@override (X, Y) foo() { ... }` from
        // `@override(X, Y)`. Aliased to `annotation` at the use site so the
        // resulting AST is indistinguishable from a normal annotation.
        // Negative dynamic precedence so the standard `annotation` rule
        // (which can also produce `@name` with no args) wins ties — this
        // matters for inputs like `@Foo() bar() {}` where both
        // `@Foo()` (annotation with empty args) and `@Foo` (bare) +
        // `()` (empty-record return type) are syntactically valid.
        _class_modifiers: $ => seq(choice($.sealed, seq(optional($.abstract), optional(choice($.base, $.interface, 'final', 'inline')))), 'class'),

        _mixin_class_modifiers: $ => seq(optional($.abstract), optional($.base), $.mixin, 'class'),

        class_definition: $ => choice(
            seq(
                optional($._metadata),
                choice($._class_modifiers, $._mixin_class_modifiers),
                field('name', $.identifier),
                optional(field('type_parameters', $.type_parameters)),
                optional(field('superclass', $.superclass)),
                optional(field('interfaces', $.interfaces)),
                field('body', $.class_body)
            ),
            seq(
                optional($._metadata),
                $._class_modifiers,
                $.mixin_application_class
            )
        ),

        _metadata: $ => prec.right(repeat1($.annotation)),


        class_body: $ => seq(
            '{',
            repeat(
                choice(
                    seq(
                        optional($._metadata),
                        $._class_member_definition
                    ),
                    // Methods whose return type is a record type, preceded by
                    // bare annotations (no argument list). The standard arm
                    // can't reach this case because `annotation`'s
                    // `optional(arguments)` greedily eats the leading `(`,
                    // which then mis-parses as the annotation's argument
                    // list. The conflict between `annotation` and
                    // `_bare_annotation` (declared at the top of this
                    // grammar) lets GLR explore both stacks; the negative
                    // dynamic precedence makes the standard path win when
                    // both interpretations are valid (e.g. `@Foo() x() {}`
                    // — empty annotation args + plain function — should
                    // not be reinterpreted as bare-annotation + record
                    // return; the standard `record_type` rule allows the
                    // empty form so this can otherwise tie).
                    prec.dynamic(-10, $._record_return_class_member),
                )
            ),
            '}'
        ),

        _record_return_class_member: $ => seq(
            repeat1(alias($._bare_annotation, $.annotation)),
            // Hidden rule aliased to `method_signature` at this use site,
            // so the AST is identical to a normal record-return method —
            // downstream tools (highlight queries, OCaml mapper) don't
            // need to learn a new node type.
            alias(
                $._record_return_method_signature,
                $.method_signature
            ),
            $.function_body
        ),

        _class_member_definition: $ => choice(
            seq($.declaration, $._semicolon),
            seq(
                $.method_signature,
                $.function_body
            ),
        ),

        _type: $ => choice(
            seq(
                $.function_type,
                optional($.nullable_type)
            ),
            $._type_not_function
            // $._function_type_tails,
            // seq(
            //     $._type_not_function,
            //     $._function_type_tails
            // ),
            // $._type_not_function
            // $._unannotated_type,
            // $.annotated_type
        ),
        function_body: $ => choice(
            seq(
                optional('async'),
                '=>',
                $._expression,
                $._semicolon
            ),
            seq(
                optional(choice(
                    'async',
                    'async*',
                    'sync*',
                )),
                $.block
            )
        ),

        function_signature: $ => seq(
            // optional($._metadata),
            optional($._type),
            field('name', choice(
                alias(
                    $._get,
                    $.identifier, // this way the syntax still highlights consistently.
                ),
                alias(
                    $._set,
                    $.identifier, // this way the syntax still highlights consistently.
                ),
                // $._get,
                // $._set,
                $.identifier
            )),
            $._formal_parameter_part,
            optional($._native),
        ),

        // _get_identifier: $ => alias(
        //         $.identifier, // this way the syntax still highlights consistently.
        //         $._get
        //     ),

        _formal_parameter_part: $ => seq(
            optional($.type_parameters),
            $.formal_parameter_list
        ),


        formal_parameter_list: $ => $._strict_formal_parameter_list,

        _strict_formal_parameter_list: $ => choice(
            seq(
                '(',
                ')'
            ),
            seq(
                '(',
                $._normal_formal_parameters,
                optional(
                    ','
                ),
                ')'
            ),
            seq(
                '(',
                $._normal_formal_parameters,
                ',',
                $.optional_formal_parameters,
                ')'
            ),
            seq(
                '(',
                $.optional_formal_parameters,
                ')'
            )
        ),

        _function_builtin_identifier: $ => prec(
            DART_PREC.BUILTIN,
            'Function',
        ),
        _get: $ => prec(
            DART_PREC.BUILTIN,
            'get',
        ),
        _native: $ => seq(
            'native', optional($.string_literal)
        ),
        _set: $ => prec(
            DART_PREC.BUILTIN,
            'set',
        ),
        label: $ => seq(
            choice(
                $.identifier,
                alias($._get, $.identifier),
                alias($._set, $.identifier),
                alias($._function_builtin_identifier, $.identifier),
            ),
            ':'
        ),

        _semicolon: $ => token(';'),

        identifier: $ => /[a-zA-Z_$][\w$]*/,
