test/corpus/annotations.txt
==================================
Simple Annotation
==================================

@Hypen()
myFunction() {}

---
(program
  (annotation
    (identifier)
    (arguments))
  (function_signature
    (identifier)
    (formal_parameter_list))
  (function_body
    (block)))

==================================
Complex Annotation
==================================

@TypedGoRoute<LoginRoute>(path: LoginRoute.path)
class LoginRoute {}

---

(program
  (class_definition
    (annotation
      (identifier)
      (type_arguments
        (type_identifier))
      (arguments
        (named_argument
          (label
            (identifier))
          (identifier)
          (selector
            (unconditional_assignable_selector
              (identifier))))))
    (identifier)
    (class_body)))